--- a/index.html
+++ b/index.html
@@ -25,19 +25,29 @@
             <nav class="HeaderMenu_pcnav">
                 <ul>
                     <li> <a href="#home">ホーム<br>HOME</a></li>
-                    <li class="header_about_item"><a href="#about">私について<br>ABOUT<div class="header_about_arrow"></div>
-                        </a>
-                    </li>
-                    <div class="about_item">
-                        <a href="#aboutme" class="about_sub_item">about me</a>
-                    </div>
+                    <ul class="about_menu">
+                        <li class="header_about_item">
+                            <a href="#about">私について<br>ABOUT<span class="header_about_arrow">
+                                </span>
+                            </a>
+                            <ul class="about_item">
+                                <li><a href="file:///Users/apple/Desktop/portfolio/about.html">about me</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
                     <li><a href="#skill">スキル<br>SKILL</a></li>
-                    <li class="header_works_item"><a href="#works">制作実績<br>WORKS <div class="header_works_arrow"></div>
-                        </a>
-                    </li>
-                    <div class="works_item">
-                        <a href="#worksmore" class="works_sub_item">Works more</a>
-                    </div>
+                    <ul class="works_menu">
+                        <li class="header_works_item">
+                            <a href="#works">制作実績<br>WORKS<span class="header_works_arrow">
+                                </span>
+                            </a>
+                            <ul class="works_item">
+                                <li><a href="./works.html"> Works more</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
                     <li class="header_contact"><a href="#contact"><img src="./images/mail_icon.svg" alt="アイコン"
                                 class="button-icon">お問合せ<br>CONTACT</a></li>
                 </ul>
@@ -98,7 +108,7 @@
                             <p>Designs</p>
                             <div class="skill_line_designs"></div>
                         </div>
-                        <img src="./images/WEBページのアイコン素材.svg" alt="WEBページのアイコン">
+                        <img src="./images/web_icon.svg" alt="WEBページのアイコン">
                     </div>
                     <dl>
                         <dt class="skill_contents_title">WEBデザイン</dt>
@@ -115,7 +125,7 @@
                             <p>Coding</p>
                             <div class="skill_line_coding"></div>
                         </div>
-                        <img src="./images/プログラムアイコン.svg" alt="パソコンのアイコン">
+                        <img src="./images/coding.svg" alt="パソコンのアイコン">
                     </div>
                     <dl>
                         <dt class="skill_contents_title">コーディング</dt>
@@ -132,7 +142,7 @@
                             <p>Accounting</p>
                             <div class="skill_line_accounting"></div>
                         </div>
-                        <img src="./images/えんぴつ付きのノートアイコン.svg" alt="ノートと鉛筆のアイコン">
+                        <img src="./images/Accounting.svg" alt="ノートと鉛筆のアイコン">
                     </div>
                     <dl>
                         <dt class="skill_contents_title">会計</dt>
@@ -150,7 +160,7 @@
                             <p>Welfare</p>
                             <div class="skill_line_welfare"></div>
                         </div>
-                        <img src="./images/介護のピクトグラム.svg" alt="介護のアイコン">
+                        <img src="./images/Welfare.svg" alt="介護のアイコン">
                     </div>
                     <dl>
                         <dt class="skill_contents_title">福祉</dt>
@@ -178,43 +188,43 @@
                 <div class="works_oblong">
                     <picture>
                         <source srcset="./images/burger_POP1_2.png" media="(max-width:767px)">
-                        <a href="./images/burger_POP1_2.png" data-lightbox="lightbox" data-title="images1/5">
+                        <a href="./images/burger_POP1_2.png" data-lightbox="lightbox" data-title="images1/6">
                             <img src="./images/burger_POP1_2.png" alt=""></a>
                     </picture>
                 </div>
                 <div>
                     <picture>
-                        <source srcset="./images/burger_POP2_2.png" media="(max-width:767px)">
-                        <a href="./images/burger_POP2_2.png" data-lightbox="lightbox" data-title="images2/5">
-                            <img src="./images/burger_POP2_2.png" alt=""></a>
-                    </picture>
-                </div>
-                <div class="works_oblong">
-                    <picture>
-                        <source srcset="./images/burger_Rich1_2.png" media="(max-width:767px)">
-                        <a href="./images/burger_Rich1_2.png" data-lightbox="lightbox" data-title="images3/5">
-                            <img src="./images/burger_Rich1_2.png" alt=""></a>
-                    </picture>
-                </div>
-                <div>
-                    <picture>
                         <source srcset="./images/burger_Rich2-2.png" media="(max-width:767px)">
-                        <a href="./images/burger_Rich2-2.png" data-lightbox="lightbox" data-title="images3/5">
+                        <a href="./images/burger_Rich2-2.png" data-lightbox="lightbox" data-title="images2/6">
                             <img src="./images/burger_Rich2-2.png" alt=""></a>
                     </picture>
                 </div>
                 <div class="works_oblong">
                     <picture>
-                        <source srcset="./images/kadai_nagaoka_01②.jpg" media="(max-width:767px)">
-                        <a href="./images/kadai_nagaoka_01②.jpg" data-lightbox="lightbox" data-title="images3/5">
-                            <img src="./images/kadai_nagaoka_01②.jpg" alt=""></a>
+                        <source srcset="./images/dezasuta_mobile.jpg" media="(max-width:767px)">
+                        <a href="./images/dezasuta_mobile.jpg" data-lightbox="lightbox" data-title="images3/6">
+                            <img src="./images/dezasuta_mobile.jpg" alt=""></a>
                     </picture>
                 </div>
                 <div>
                     <picture>
-                        <source srcset="./images/kadai2_nagaoka_02.jpg" media="(max-width:767px)">
-                        <a href="./images/kadai2_nagaoka_02.jpg" data-lightbox="lightbox" data-title="images3/5">
-                            <img src="./images/kadai2_nagaoka_02.jpg" alt=""></a>
+                        <source srcset="./images/trrrrip.jpg" media="(max-width:767px)">
+                        <a href="./images/trrrrip.jpg" data-lightbox="lightbox" data-title="images4/6">
+                            <img src="./images/trrrrip.jpg" alt=""></a>
+                    </picture>
+                </div>
+                <div class="works_oblong">
+                    <picture>
+                        <source srcset="./images/life_fv.png" media="(max-width:767px)">
+                        <a href="./images/life_fv.png" data-lightbox="lightbox" data-title="images5/6">
+                            <img src="./images/life_fv.png" alt=""></a>
+                    </picture>
+                </div>
+                <div class="works_oblong">
+                    <picture>
+                        <source srcset="./images/workers.png" media="(max-width:767px)">
+                        <a href="./images/workers.png" data-lightbox="lightbox" data-title="images6/6">
+                            <img src="./images/workers.png" alt=""></a>
                     </picture>
                 </div>
             </div>
