--- a/about.html
+++ b/about.html
@@ -24,14 +24,12 @@
             </h1>
             <nav class="HeaderMenu_pcnav">
                 <ul>
-                    <li> <a href="file:///Users/apple/Desktop/portfolio/index.html">ホーム<br>HOME</a></li>
-                    <li class="header_about_item"><a
-                            href="file:///Users/apple/Desktop/portfolio/index.html#about">私について<br>ABOUT</a></li>
-                    <li><a href="file:///Users/apple/Desktop/portfolio/index.html#skill">スキル<br>SKILL</a></li>
-                    <li class="header_works_item"><a
-                            href="file:///Users/apple/Desktop/portfolio/index.html#works">制作実績<br>WORKS</a></li>
-                    <li class="header_contact"><a href="file:///Users/apple/Desktop/portfolio/index.html#contact"><img
-                                src="./images/mail_icon.svg" alt="アイコン" class="button-icon">お問合せ<br>CONTACT</a></li>
+                    <li> <a href="./index.html">ホーム<br>HOME</a></li>
+                    <li class="header_about_item"><a href="./index.html#about">私について<br>ABOUT</a></li>
+                    <li><a href="./index.html#skill">スキル<br>SKILL</a></li>
+                    <li class="header_works_item"><a href="./index.html#works">制作実績<br>WORKS</a></li>
+                    <li class="header_contact"><a href="./index.html#contact"><img src="./images/mail_icon.svg"
+                                alt="アイコン" class="button-icon">お問合せ<br>CONTACT</a></li>
                 </ul>
             </nav>
         </div>
@@ -66,14 +64,12 @@
             </h1>
             <nav class="FooterMenu_pcnav">
                 <ul>
-                    <li> <a href="file:///Users/apple/Desktop/portfolio/index.html">ホーム<br>HOME</a></li>
-                    <li class="header_about_item"><a
-                            href="file:///Users/apple/Desktop/portfolio/index.html#about">私について<br>ABOUT</a></li>
-                    <li><a href="file:///Users/apple/Desktop/portfolio/index.html#skill">スキル<br>SKILL</a></li>
-                    <li class="header_works_item"><a
-                            href="file:///Users/apple/Desktop/portfolio/index.html#works">制作実績<br>WORKS</a></li>
-                    <li class="header_contact"><a href="file:///Users/apple/Desktop/portfolio/index.html#contact"><img
-                                src="./images/mail_icon.svg" alt="アイコン" class="button-icon">お問合せ<br>CONTACT</a></li>
+                    <li> <a href="./index.html">ホーム<br>HOME</a></li>
+                    <li class="header_about_item"><a href="./index.html#about">私について<br>ABOUT</a></li>
+                    <li><a href="./index.html#skill">スキル<br>SKILL</a></li>
+                    <li class="header_works_item"><a href="./index.html#works">制作実績<br>WORKS</a></li>
+                    <li class="header_contact"><a href="./index.html#contact"><img src="./images/mail_icon.svg"
+                                alt="アイコン" class="button-icon">お問合せ<br>CONTACT</a></li>
                 </ul>
             </nav>
         </div>
