--- a/works_2.html
+++ b/works_2.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css"
         href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css">
     <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/works_2.css">
+    <link rel="stylesheet" href="./css/works_1.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
@@ -24,14 +24,12 @@
             </h1>
             <nav class="HeaderMenu_pcnav">
                 <ul>
-                    <li> <a href="file:///Users/apple/Desktop/portfolio/index.html">ホーム<br>HOME</a></li>
-                    <li class="header_about_item"><a
-                            href="file:///Users/apple/Desktop/portfolio/index.html#about">私について<br>ABOUT</a></li>
-                    <li><a href="file:///Users/apple/Desktop/portfolio/index.html#skill">スキル<br>SKILL</a></li>
-                    <li class="header_works_item"><a
-                            href="file:///Users/apple/Desktop/portfolio/index.html#works">制作実績<br>WORKS</a></li>
-                    <li class="header_contact"><a href="file:///Users/apple/Desktop/portfolio/index.html#contact"><img
-                                src="./images/mail_icon.svg" alt="アイコン" class="button-icon">お問合せ<br>CONTACT</a></li>
+                    <li> <a href="./index.html">ホーム<br>HOME</a></li>
+                    <li class="header_about_item"><a href="./index.html#about">私について<br>ABOUT</a></li>
+                    <li><a href="./index.html#skill">スキル<br>SKILL</a></li>
+                    <li class="header_works_item"><a href="./index.html#works">制作実績<br>WORKS</a></li>
+                    <li class="header_contact"><a href="./index.html#contact"><img src="./images/mail_icon.svg"
+                                alt="アイコン" class="button-icon">お問合せ<br>CONTACT</a></li>
                 </ul>
             </nav>
         </div>
@@ -41,37 +39,37 @@
             <h2 class="worksmore_title">works more</h2>
         </div>
         <div class="worksmore1_contents">
-            <p>デザインカフェ HP</p>
+            <p>デザインカフェ HP (架空)</p>
             <div class="worksmore1_border"></div>
             <div class="works_circle1 "></div>
-            <div class="worksmore_img"> <img src="./images/design_cafe.png" alt=""> </div>
+            <div class="worksmore_img"> <img src="./images/design_cafe1.png" alt=""> </div>
         </div>
         <div class="worksmore_text">
             <div>
                 <dt>課題内容</dt>
-                <dd>PC版ランディングページ 実践に近いデザイン<br>10周年を機会にWEBサイトをリニューアル<br>認知向上・予約獲得・SNSフォロワーUP
+                <dd>コーディング学習のためのスクール課題
                 </dd>
             </div>
             <div>
                 <dt>ターゲット</dt>
-                <dd>女性（20代〜50代） </dd>
+                <dd>幅広い年齢の男女<br>落ち着いた雰囲気のカフェを好みの人 </dd>
             </div>
             <div>
                 <dt>要望</dt>
-                <dd>美容室の全体感がわかるサイト<br>お店の雰囲気・人が感じられるサイト
+                <dd>サイトを見たお客様がカフェの雰囲気を感じられ、幅広い年代が使いやすいサイト。
                 </dd>
             </div>
             <div>
                 <dt>担当範囲</dt>
-                <dd>デザイン</dd>
+                <dd>コーディング</dd>
             </div>
             <div>
                 <dt>制作期間</dt>
-                <dd>10日間</dd>
+                <dd>2週間</dd>
             </div>
             <div>
                 <dt>ツール</dt>
-                <dd>Illustrator</dd>
+                <dd>HTML/CSS/JavaScriptr</dd>
             </div>
         </div>
         <div class="worksmore_point">
@@ -79,14 +77,14 @@
                 <span class="works_separator"></span>
                 <p>制作のポイント</p>
             </div>
-            <p>「美容室の全体感が分かるサイト」をイメージして、白を基調にしたシンプルなデザインを心掛けました。ロゴのピンクを使い、全体的に優しく明るい雰囲気作りをしました。</p>
+            <p>カフェのナチュラルで落ち着いた雰囲気を表現できるように意識しました。幅広い年代の方が使いやすいようにレスポンシブ対応を心がけました。</p>
         </div>
         <div class="worksmore_lp">
-            <img src="./images/life.jpg" alt="">
+            <img src="./images/design-cafe.png" alt="">
         </div>
         <button class="worksmore-backbutton">
             <div>
-                <a href="file:///Users/apple/Desktop/portfolio/works.html">back</a>
+                <a href="./works.html">back</a>
             </div>
         </button>
     </section>
@@ -97,14 +95,12 @@
             </h1>
             <nav class="FooterMenu_pcnav">
                 <ul>
-                    <li> <a href="file:///Users/apple/Desktop/portfolio/index.html">ホーム<br>HOME</a></li>
-                    <li class="header_about_item"><a
-                            href="file:///Users/apple/Desktop/portfolio/index.html#about">私について<br>ABOUT</a></li>
-                    <li><a href="file:///Users/apple/Desktop/portfolio/index.html#skill">スキル<br>SKILL</a></li>
-                    <li class="header_works_item"><a
-                            href="file:///Users/apple/Desktop/portfolio/index.html#works">制作実績<br>WORKS</a></li>
-                    <li class="header_contact"><a href="file:///Users/apple/Desktop/portfolio/index.html#contact"><img
-                                src="./images/mail_icon.svg" alt="アイコン" class="button-icon">お問合せ<br>CONTACT</a></li>
+                    <li> <a href="./index.html">ホーム<br>HOME</a></li>
+                    <li class="header_about_item"><a href="./index.html#about">私について<br>ABOUT</a></li>
+                    <li><a href="./index.html#skill">スキル<br>SKILL</a></li>
+                    <li class="header_works_item"><a href="./index.html#works">制作実績<br>WORKS</a></li>
+                    <li class="header_contact"><a href="./index.html#contact"><img src="./images/mail_icon.svg"
+                                alt="アイコン" class="button-icon">お問合せ<br>CONTACT</a></li>
                 </ul>
             </nav>
         </div>
