--- a/works_3.html
+++ b/works_3.html
@@ -39,37 +39,37 @@
             <h2 class="worksmore_title">works more</h2>
         </div>
         <div class="worksmore1_contents">
-            <p>美容院「LIFE」LP （架空）</p>
+            <p>長岡千穂 portfolio</p>
             <div class="worksmore1_border"></div>
             <div class="works_circle1 "></div>
-            <div class="worksmore_img"> <img src="./images/life_lp.png" alt=""> </div>
+            <div class="worksmore_img"> <img src="./images/portfolio1.png" alt=""> </div>
         </div>
         <div class="worksmore_text">
             <div>
                 <dt>課題内容</dt>
-                <dd>PC版ランディングページ 実践に近いデザイン<br>10周年を機会にWEBサイトをリニューアル<br>認知向上・予約獲得・SNSフォロワーUP
+                <dd>デザインのポートフォリオ作成
                 </dd>
             </div>
             <div>
                 <dt>ターゲット</dt>
-                <dd>女性（20代〜50代） </dd>
+                <dd>福祉関連のデザイン関係者</dd>
             </div>
             <div>
                 <dt>要望</dt>
-                <dd>美容室の全体感がわかるサイト<br>お店の雰囲気・人が感じられるサイト
+                <dd>高齢者でも見やすいポートフォリを作成したい
                 </dd>
             </div>
             <div>
                 <dt>担当範囲</dt>
-                <dd>デザイン</dd>
+                <dd>デザイン/コーディング</dd>
             </div>
             <div>
                 <dt>制作期間</dt>
-                <dd>10日間</dd>
+                <dd>2ヶ月</dd>
             </div>
             <div>
                 <dt>ツール</dt>
-                <dd>Illustrator</dd>
+                <dd>HTML/CSS/JavaScriptr</dd>
             </div>
         </div>
         <div class="worksmore_point">
@@ -77,10 +77,10 @@
                 <span class="works_separator"></span>
                 <p>制作のポイント</p>
             </div>
-            <p>「美容室の全体感が分かるサイト」をイメージして、白を基調にしたシンプルなデザインを心掛けました。ロゴのピンクを使い、全体的に優しく明るい雰囲気作りをしました。</p>
+            <p>高齢者でも見やすいポートフォリオのため、文字のサイズや余白を大きく取り、見やすいデザインにしました。</p>
         </div>
         <div class="worksmore_lp">
-            <img src="./images/life.jpg" alt="">
+            <img src="./images/ portfolio_1.png" alt="">
         </div>
         <button class="worksmore-backbutton">
             <div>
