--- a/works.html
+++ b/works.html
@@ -24,14 +24,12 @@
             </h1>
             <nav class="HeaderMenu_pcnav">
                 <ul>
-                    <li> <a href="file:///Users/apple/Desktop/portfolio/index.html">ホーム<br>HOME</a></li>
-                    <li class="header_about_item"><a
-                            href="file:///Users/apple/Desktop/portfolio/index.html#about">私について<br>ABOUT</a></li>
-                    <li><a href="file:///Users/apple/Desktop/portfolio/index.html#skill">スキル<br>SKILL</a></li>
-                    <li class="header_works_item"><a
-                            href="file:///Users/apple/Desktop/portfolio/index.html#works">制作実績<br>WORKS</a></li>
-                    <li class="header_contact"><a href="file:///Users/apple/Desktop/portfolio/index.html#contact"><img
-                                src="./images/mail_icon.svg" alt="アイコン" class="button-icon">お問合せ<br>CONTACT</a></li>
+                    <li> <a href="./index.html">ホーム<br>HOME</a></li>
+                    <li class="header_about_item"><a href="./index.html#about">私について<br>ABOUT</a></li>
+                    <li><a href="./index.html#skill">スキル<br>SKILL</a></li>
+                    <li class="header_works_item"><a href="./index.html#works">制作実績<br>WORKS</a></li>
+                    <li class="header_contact"><a href="./index.html#contact"><img src="./images/mail_icon.svg"
+                                alt="アイコン" class="button-icon">お問合せ<br>CONTACT</a></li>
                 </ul>
             </nav>
         </div>
@@ -46,59 +44,60 @@
                 <span>Website</span>
                 <span class="works_separator"></span>
                 <span>Design</span>
-                <br>美容院「LIFE」LP
-                <div class="works_img "><a href="file:///Users/apple/Desktop/portfolio/works_1.html"><img
-                            src="./images/life_fv.png" alt=""></a>
+                <br>美容院「LIFE」LP (架空)
+                <div class="works_img "><a href="./works_1.html"><img src="./images/life_fv.png" alt=""></a>
                 </div>
             </div>
             <div class="works">
                 <span>Website</span>
                 <span class="works_separator"></span>
                 <span>Coding</span>
-                <br>デザインカフェ HP
-                <div class="works_img"><a href="###"><img src="./images/design_cafe.png" alt=""></a></div>
+                <br>デザインカフェ HP（架空）
+                <div class="works_img"><a href="./works_2.html"><img src="./images/design_cafe.png" alt=""></a></div>
             </div>
             <div class="works">
                 <span>Website</span>
                 <span class="works_separator"></span>
                 <span>Design/Coding </span>
                 <br>長岡千穂 portfolio
-                <div class="works_img"><a href="###"><img src="./images/portfolio.png" alt=""></a></div>
+                <div class="works_img"><a href="./works_3.html"><img src="./images/portfolio.png" alt=""></a></div>
             </div>
             <div class="works">
                 <span>Website</span>
                 <span class="works_separator"></span>
                 <span>Design</span>
-                <br>コワーキングスペース『WORKERS」HP
-                <div class="works_img"><a href="###"><img src="./images/workers.png" alt=""></a></div>
+                <br>コワーキングスペース『WORKERS」HP（架空）
+                <div class="works_img"><a href="./works_4.html"><img src="./images/workers.png" alt=""></a></div>
             </div>
             <div class="works">
                 <span>Webbanner</span>
                 <span class="works_separator"></span>
                 <span>Design</span>
-                <br>ハンバーガーバナー（Richver.）
-                <div class="works_img square"><a href="###"><img src="./images/burger_Rich2-2.png" alt=""></a></div>
+                <br>ハンバーガーバナー Richver.（架空）
+                <div class="works_img square"><a href="./works_5.html"><img src="./images/burger_Rich2-2.png"
+                            alt=""></a></div>
             </div>
             <div class="works">
                 <span>Webbanner</span>
                 <span class="works_separator"></span>
                 <span>Design</span>
-                <br>ハンバーガーバナー（POPver.）
-                <div class="works_img"><a href="###"><img src="./images/burger_POP1_2.png" alt=""></a></div>
+                <br>ハンバーガーバナー POPver.（架空）
+                <div class="works_img"><a href="./works_6.html"><img src="./images/burger_POP1_2.png" alt=""></a></div>
             </div>
             <div class="works">
                 <span>Webbanner</span>
                 <span class="works_separator"></span>
                 <span>Design</span>
-                <br>デザスタmobileバナー
-                <div class="works_img"><a href="###"><img src="./images/dezasuta_mobile.jpg" alt=""></a></div>
+                <br>デザスタmobileバナー（架空）
+                <div class="works_img"><a href="./works_7.html"><img src="./images/dezasuta_mobile.jpg" alt=""></a>
+                </div>
             </div>
             <div class="works">
                 <span>Webbanner</span>
                 <span class="works_separator"></span>
                 <span>Design</span>
-                <br>トラベルメディア「TRRRRIP」バナー
-                <div class="works_img square"><a href="###"><img src="./images/trrrrip.jpg" alt=""></a></div>
+                <br>トラベルメディア「TRRRRIP」バナー（架空）
+                <div class="works_img square"><a href="./works_8.html"><img src="./images/trrrrip.jpg" alt=""></a></div>
             </div>
         </div>
     </section>
@@ -109,14 +108,12 @@
             </h1>
             <nav class="FooterMenu_pcnav">
                 <ul>
-                    <li> <a href="file:///Users/apple/Desktop/portfolio/index.html">ホーム<br>HOME</a></li>
-                    <li class="header_about_item"><a
-                            href="file:///Users/apple/Desktop/portfolio/index.html#about">私について<br>ABOUT</a></li>
-                    <li><a href="file:///Users/apple/Desktop/portfolio/index.html#skill">スキル<br>SKILL</a></li>
-                    <li class="header_works_item"><a
-                            href="file:///Users/apple/Desktop/portfolio/index.html#works">制作実績<br>WORKS</a></li>
-                    <li class="header_contact"><a href="file:///Users/apple/Desktop/portfolio/index.html#contact"><img
-                                src="./images/mail_icon.svg" alt="アイコン" class="button-icon">お問合せ<br>CONTACT</a></li>
+                    <li> <a href="./index.html">ホーム<br>HOME</a></li>
+                    <li class="header_about_item"><a href="./index.html#about">私について<br>ABOUT</a></li>
+                    <li><a href="./index.html#skill">スキル<br>SKILL</a></li>
+                    <li class="header_works_item"><a href="./index.html#works">制作実績<br>WORKS</a></li>
+                    <li class="header_contact"><a href="./index.html#contact"><img src="./images/mail_icon.svg"
+                                alt="アイコン" class="button-icon">お問合せ<br>CONTACT</a></li>
                 </ul>
             </nav>
         </div>
