--- a/works_4.html
+++ b/works_4.html
@@ -39,24 +39,24 @@
             <h2 class="worksmore_title">works more</h2>
         </div>
         <div class="worksmore1_contents">
-            <p>美容院「LIFE」LP （架空）</p>
+            <p>コワーキングスペース『WORKERS」HP（架空）</p>
             <div class="worksmore1_border"></div>
             <div class="works_circle1 "></div>
-            <div class="worksmore_img"> <img src="./images/life_lp.png" alt=""> </div>
+            <div class="worksmore_img"> <img src="./images/workers1.png" alt=""> </div>
         </div>
         <div class="worksmore_text">
             <div>
                 <dt>課題内容</dt>
-                <dd>PC版ランディングページ 実践に近いデザイン<br>10周年を機会にWEBサイトをリニューアル<br>認知向上・予約獲得・SNSフォロワーUP
+                <dd>コワーキングスペース『WORKERS」HP作成
                 </dd>
             </div>
             <div>
                 <dt>ターゲット</dt>
-                <dd>女性（20代〜50代） </dd>
+                <dd>20代〜40代の男女。テレワークのための仕事場所を探している</dd>
             </div>
             <div>
                 <dt>要望</dt>
-                <dd>美容室の全体感がわかるサイト<br>お店の雰囲気・人が感じられるサイト
+                <dd>明るく、親しみのあるデザイン。
                 </dd>
             </div>
             <div>
@@ -65,7 +65,7 @@
             </div>
             <div>
                 <dt>制作期間</dt>
-                <dd>10日間</dd>
+                <dd>1週間</dd>
             </div>
             <div>
                 <dt>ツール</dt>
@@ -77,10 +77,10 @@
                 <span class="works_separator"></span>
                 <p>制作のポイント</p>
             </div>
-            <p>「美容室の全体感が分かるサイト」をイメージして、白を基調にしたシンプルなデザインを心掛けました。ロゴのピンクを使い、全体的に優しく明るい雰囲気作りをしました。</p>
+            <p>イラストを使用し、親しみやすさや重要な情報を見やすいように整理しました。必要な情報がすぐに理解出来るように意識しました</p>
         </div>
         <div class="worksmore_lp">
-            <img src="./images/life.jpg" alt="">
+            <img src="./images/workers_1.png" alt="">
         </div>
         <button class="worksmore-backbutton">
             <div>
