--- a/works_6.html
+++ b/works_6.html
@@ -39,24 +39,26 @@
             <h2 class="worksmore_title">works more</h2>
         </div>
         <div class="worksmore1_contents">
-            <p>美容院「LIFE」LP （架空）</p>
+            <p>ハンバーガーバナー POPver.（架空）</p>
             <div class="worksmore1_border"></div>
             <div class="works_circle1 "></div>
-            <div class="worksmore_img"> <img src="./images/life_lp.png" alt=""> </div>
+            <div class="worksmore_img worksmore_img_SP"> <img src="./images/burger_POP.png" alt=""> </div>
         </div>
         <div class="worksmore_text">
             <div>
                 <dt>課題内容</dt>
-                <dd>PC版ランディングページ 実践に近いデザイン<br>10周年を機会にWEBサイトをリニューアル<br>認知向上・予約獲得・SNSフォロワーUP
+                <dd>新商品の告知のためのバナー<br>
+                    サイト誘導と来店促進が目的<br>
+                    InstagramとX両方で検証を行う
                 </dd>
             </div>
             <div>
                 <dt>ターゲット</dt>
-                <dd>女性（20代〜50代） </dd>
+                <dd>若者（10代〜30代）</dd>
             </div>
             <div>
                 <dt>要望</dt>
-                <dd>美容室の全体感がわかるサイト<br>お店の雰囲気・人が感じられるサイト
+                <dd>POPな雰囲気のバナー
                 </dd>
             </div>
             <div>
@@ -65,7 +67,7 @@
             </div>
             <div>
                 <dt>制作期間</dt>
-                <dd>10日間</dd>
+                <dd>1週間</dd>
             </div>
             <div>
                 <dt>ツール</dt>
@@ -77,10 +79,11 @@
                 <span class="works_separator"></span>
                 <p>制作のポイント</p>
             </div>
-            <p>「美容室の全体感が分かるサイト」をイメージして、白を基調にしたシンプルなデザインを心掛けました。ロゴのピンクを使い、全体的に優しく明るい雰囲気作りをしました。</p>
+            <p>ハンバーガーを大きく配置し、迫力あるデザインを心掛けました。
+                「デラックスバーガー」は太めの丸ゴシック体を使用し、元気なPOPな印象を与えられるようにしました。</p>
         </div>
         <div class="worksmore_lp">
-            <img src="./images/life.jpg" alt="">
+            <img src="./images/burger_POP1_2.png" alt="">
         </div>
         <button class="worksmore-backbutton">
             <div>
