--- a/thanks.html
+++ b/thanks.html
@@ -37,7 +37,7 @@
     <section id="thanks" class="thanks">
         <div class="thanks_contents">
             <h2>お問合わせありがとうございます</h2>
-            <p class="thanks_text">ご記入いただいた情報は無事に送信されました。<br>確認のため、お客様に自動返信メールをお送りしております。</p>
+            <p class="thanks_text">ご記入いただいた情報は無事に送信されました。<br>48時間以内に順次ご連絡を致しますのでお待ちください。</p>
 
             <button class="thanks-button">
                 <div class="thank_circle">
