--- a/index.html
+++ b/index.html
@@ -52,7 +52,43 @@
                                 class="button-icon">お問合せ<br>CONTACT</a></li>
                 </ul>
             </nav>
+            <div class="sp_btn ">
+                <span></span>
+                <p>menu</p>
+            </div>
+            <nav class="HeaderMenu_spnav">
+                <ul>
+                    <li> <a href="#home">ホーム<br>HOME</a></li>
+                    <ul class="about_menu">
+                        <li class="header_about_item">
+                            <a href="#about">私について<br>ABOUT<span class="header_about_arrow">
+                                </span>
+                            </a>
+                            <ul class="about_item">
+                                <li><a href="./about.html">about me</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <li><a href="#skill">スキル<br>SKILL</a></li>
+                    <ul class="works_menu">
+                        <li class="header_works_item">
+                            <a href="#works">制作実績<br>WORKS<span class="header_works_arrow">
+                                </span>
+                            </a>
+                            <ul class="works_item">
+                                <li><a href="./works.html"> Works more</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <li class="header_contact"><a href="#contact"><img src="./images/mail_icon.svg" alt="アイコン"
+                                class="button-icon">お問合せ<br>CONTACT</a></li>
+                </ul>
+            </nav>
+
         </div>
+
     </header>
     <section id="home" class="home">
         <p class="home_text">あなたの想いを<br>デザインに乗せて<br>届けたい</p>
@@ -262,14 +298,14 @@
                 </div>
 
                 <div class="contact_button">
-                    <button type="contact" class="contact_button_text">送信する</button>
+                    <button type="submit" class="contact_button_text">送信する</button>
                 </div>
             </form>
             <script type="text/javascript">
                 var submitted = false;
             </script>
             <iframe name="hidden_iframe" id="hidden_iframe" style="display: none"
-                onload="if(submitted)  {window.location='file:/thanks.html';}"></iframe>
+                onload="if(submitted)  {window.location='./thanks.html';}"></iframe>
         </div>
     </section>
     <footer>
@@ -338,6 +374,11 @@
                 })
             });
         });
+        $(function () {
+            $('.sp_btn').on('click', function () {
+                $('.sp_btn').toggleClass('open');
+            })
+        })
     </script>
 
 </body>
